FFWS-46: fix wrong colour of View all button after click.

--- a/src/fleming-theme/templates/flexible-content/link_button.scss
+++ b/src/fleming-theme/templates/flexible-content/link_button.scss
@@ -11,7 +11,7 @@
     height: auto;
   }
 
-  .turquoise, .turquoise:hover {
+  .turquoise, .turquoise:hover, .turquoise:focus {
     background-color: $turquoise;
     border-color: $turquoise;
   }
